--- a/src/Components/footer.css
+++ b/src/Components/footer.css
@@ -2,6 +2,7 @@
   background-color: aqua;
   bottom: 0;
   display: flex;
+  flex-direction: row;
   justify-content: space-around;
   position: fixed;
   width: 100%;
